# icub-forward-kinematics-inspection

./: .gitignore  CMakeLists.txt  README.md  compare_tables.m  test.sh
dockerfiles/: Dockerfile  README.md  cartesianSolver.ini
fkin/: CMakeLists.txt  main.cpp
model/: dhParams_v2.0_left_hand.ini  dhParams_v2.0_right_hand.ini  dhParams_v2.5_left_hand.ini  dhParams_v2.5_right_hand.ini  dhParams_v3_right_hand.ini
resources/: icubarm_left_source_dhparams.csv  icubarm_left_urdf_dhparams.csv  icubarm_left_urdf_h0_hn.txt  icubarm_right_source_dhparams.csv  icubarm_right_urdf_dhparams.csv  icubarm_right_urdf_h0_hn.txt  icubarm_source_dhparams.csv  icubgenova02_urdf_dhparams.csv  icubgenova02_urdf_h0_hn.txt
src/: fkinModule.cpp  fkinModule.h  main.cpp
